# libfreenectMap

3rd/include/libfreenect2/: config.h  registration.h
3rd/lib/: freenect2.lib  freenect2d.lib
src/: CMakeLists.txt  libfreenect2opencv.cpp  libfreenect2opencv.h  main.cpp
